--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "ssy-ui-vite",
+  "name": "yy142139-ssy-ui-vite",
   "type": "module",
-  "version": "1.0.0",
+  "version": "0.1.1",
   "description": "",
   "author": "",
   "license": "ISC",
   "keywords": [],
+  "files": ["dist"],
   "main": "index.js",
   "scripts": {
     "test": "vitest",
@@ -25,6 +26,10 @@
     "cz-customizable": {
       "config": ".cz-config.cjs"
     }
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
     "vue": "^3.5.12"
