--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yyyy142139-ssy-ui-vite",
+  "name": "wonobug-ssyui",
   "type": "module",
   "version": "0.1.1",
   "description": "",
