--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "build": "pnpm build:components && pnpm type:build",
     "typecheck": "vue-tsc --noEmit",
     "type:build": "vue-tsc -b --declaration --emitDeclarationOnly tsconfig.types.json",
-    "clean:dist": "rimraf dist"
+    "clean:dist": "rimraf dist",
+    "test:coverage": "vitest run --coverage"
   },
   "config": {
     "commitizen": {
@@ -61,6 +62,8 @@
     "@unocss/eslint-plugin": "^0.62.4",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "@vitest/coverage-istanbul": "^2.1.4",
+    "@vitest/coverage-v8": "^2.1.4",
     "@vue/test-utils": "2.4.6",
     "cz-customizable": "^7.2.1",
     "eslint": "^9.11.1",
@@ -75,7 +78,7 @@
     "vite": "^5.4.9",
     "vitepress": "^1.4.1",
     "vitepress-theme-demoblock": "3.0.7",
-    "vitest": "2.1.2",
+    "vitest": "2.1.4",
     "vue-tsc": "^2.1.8"
   }
 }
