--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,30 @@
-# Node.js dependencies
-node_modules/
-
-# Build output
-dist/
-build/
-
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# IDE/Editor specific files
-.idea/
-.vscode/
-*.sublime-workspace
-*.sublime-project
-
-# Operating System specific files
+node_modules
 .DS_Store
-Thumbs.db
+dist
+dist-ssr
+coverage
+*.local
 
-# Environment variables
-.env
-.env.local
-.env.*.local
+/cypress/videos/
+/cypress/screenshots/
 
-# Test coverage
-coverage/
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Other files to ignore
-*.log
-*.tgz
-*.zip
+*.tsbuildinfo
