--- a/package.json
+++ b/package.json
@@ -1,84 +1,47 @@
 {
-  "name": "wonobug-ssyui",
+  "name": "ssy-ui-template",
+  "version": "1.0.0",
+  "private": true,
   "type": "module",
-  "version": "0.2.0",
-  "description": "",
-  "author": "",
-  "license": "ISC",
-  "homepage": "https://ssy-ui-vite-five.vercel.app/",
+  "description": "ssy-ui-template模版项目",
   "keywords": [],
-  "exports": {
-    ".": {
-      "types": "./dist/entry.d.ts",
-      "import": "./dist/ssy-ui.js",
-      "require": "./dist/ssy-ui.umd.cjs"
-    },
-    "./*": "./*"
-  },
-  "main": "./dist/ssy-ui.umd.cjs",
-  "module": "./dist/ssy-ui.js",
-  "types": "./dist/entry.d.ts",
-  "files": [
-    "dist"
-  ],
+  "author": "45mx",
   "scripts": {
-    "test": "vitest",
     "dev": "vite",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs",
-    "prepare": "husky",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "build:all": "vite build",
-    "build:components": "tsx ./scripts/build.ts",
-    "build": "pnpm build:components && pnpm type:build",
-    "typecheck": "vue-tsc --noEmit",
-    "type:build": "vue-tsc -b --declaration --emitDeclarationOnly tsconfig.types.json",
-    "clean:dist": "rimraf dist",
-    "test:coverage": "vitest run --coverage"
-  },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-customizable"
-    },
-    "cz-customizable": {
-      "config": ".cz-config.cjs"
-    }
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "test:unit": "vitest",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build --force",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
-    "vue": "^3.5.12"
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "pinia": "^2.2.6",
+    "ssy-ui-vite": "^1.8.0",
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.7.3",
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@iconify-json/ic": "^1.2.1",
-    "@types/fs-extra": "^11.0.4",
-    "@unocss/eslint-plugin": "^0.62.4",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^20.17.0",
+    "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
-    "@vitest/coverage-istanbul": "^2.1.4",
-    "@vitest/coverage-v8": "^2.1.4",
-    "@vue/test-utils": "2.4.6",
-    "cz-customizable": "^7.2.1",
-    "eslint": "^9.11.1",
-    "eslint-plugin-format": "^0.1.2",
-    "fs-extra": "^11.2.0",
-    "happy-dom": "15.7.4",
-    "husky": "^9.1.6",
-    "terser": "5.34.1",
-    "tsx": "^4.19.1",
-    "typescript": "5.5.4",
-    "unocss": "^0.63.4",
-    "vite": "^5.4.9",
-    "vitepress": "^1.4.1",
-    "vitepress-theme-demoblock": "3.0.7",
-    "vitest": "2.1.4",
-    "vue-tsc": "^2.1.8"
+    "@vitest/eslint-plugin": "1.1.7",
+    "@vue/eslint-config-typescript": "^14.1.1",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.5.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.29.0",
+    "jsdom": "^25.0.1",
+    "npm-run-all2": "^7.0.1",
+    "typescript": "~5.6.0",
+    "vite": "^5.4.10",
+    "vite-plugin-vue-devtools": "^7.5.3",
+    "vitest": "^2.1.3",
+    "vue-tsc": "^2.1.6"
   }
 }
